@@ -132,7 +132,7 @@
 #             SIGNPOST
 #             SIMPLE_RAIL
 #             STAIRS
-#             THINSLICE
+#             SNOW
 #             TORCH
 #             TRAPDOOR
 #             WALLSIGN
@@ -154,9 +154,6 @@
 #         are lava, fire, and mob spawners.
 #
 #         "FLOOR" is currently used for redstone wire and Water Lilies
-#
-#         "THINSLICE" is currently only used for snow, and I may eventually
-#         change that to "SNOW" instead, and clean up that rendering.
 #
 #   tex_extra: This is a section to provide extra texture information for 
 #         block types which require it.  A list of the required tex_extra
@@ -922,7 +919,7 @@ blocks:
     name: Snow
     mapcolor: [255, 255, 255]
     tex: [2, 4]
-    type: THINSLICE
+    type: SNOW
   
   - id: 79
     idStr: ICE
