@@ -9,6 +9,7 @@
     are highlighted.
   * Slime-spawn highlighting will only display in the Overworld
   * Slime-spawn highlighting will go up to y=40, as per Beta 1.9-pre5
+  * Cleaned up snow rendering
   * (internal) update to LWJGL 2.8.2
   * (internal) removed quite a few unneeded LWJGL Jar files
 
